Issue #3741: Make the bottom border on tables invisible.

--- a/core/themes/seven/css/style.css
+++ b/core/themes/seven/css/style.css
@@ -501,7 +501,7 @@ table {
   border: 0;
 }
 tbody {
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid #f7f7f7;
 }
 tr.even,
 tr.odd {
